Fix long decimal numbers overflowing the screen

--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 :root {
-    --white: #fff;
-    --black: #000;
-    --main: #999;
     --background: #111;
+    --main: #999;
+    --screen: #111;
+    --buttons: #111;
+    --text: #fff;
 }
 
 body {
@@ -24,46 +25,49 @@ main {
     align-items: center;
 }
 
-#screen {
+.screen {
     width: 90%;
     height: 20%;
-    background-color: var(--background);
-    text-align: right;
+    background-color: var(--screen);
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
 }
 
-#previous {
+#previous,
+#current {
     width: 90%;
-    height: 40%;
-    color: var(--white);
-    font-size: 1.5rem;
+    height: 45%;
+    color: var(--text);
+    text-align: right;
+    overflow: hidden;
+    display: flex;
+    justify-content: end;
+    align-items: center;
+}
+
+#previous {
+    font-size: 1.3rem;
     opacity: 50%;
 }
 
 #current {
-    width: 90%;
-    height: 40%;
-    color: var(--white);
     font-size: 2rem;
 }
 
-#buttons {
+.buttons {
     width: 90%;
     height: 65%;
     display: grid;
-    grid-template-columns: repeat(4, 21.25%);
-    grid-template-rows: repeat(5, 16%);
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(5, 1fr);
     grid-gap: 5%;
 }
 
 button {
-    background-color: var(--background);
-    color: var(--white);
-    font-size: 1rem;
+    background-color: var(--buttons);
+    color: var(--text);
+    font-size: 1.2rem;
     border: none;
-    border-radius: 0;
-    box-sizing: border-box;
 }
